# genai-for-trading-and-am

./: .gitignore  README.md  pyproject.toml
chapter01/: BIL.csv  BIL_annualized_returns_20_day_MA.csv  BIL_last_100_days.csv  BIL_returns.csv  BIL_returns_last_100_days.csv  Indices.csv  Indices.xlsx  Indices_daily_returns.csv  SPY_last_100_days.csv  SPY_returns_last_100_days.csv  inputDataOHLCDaily_ETF_20150417.csv
chapter02/: F-F_Research_Data_Factors_daily.CSV
chapter04/: EvaluationGenerativeModels.ipynb
chapter05/: ChronosZeroShot.ipynb  GlounTSTutorial.ipynb  LSTMModel.ipynb  LagLlamaZeroShot.ipynb  LinearARModel.ipynb  NaiveModel.ipynb  ProbabilisticNeuralARModel.ipynb
chapter06/: MNIST_VAE_2D.ipynb  TimeVAE.ipynb
chapter07/: NiceFlows.ipynb  RealNVPFlow.ipynb
chapter08/: MNIST_GAN_2D.ipynb  RGAN.ipynb  TimeGAN.ipynb
chapter10/: DatasetsTutorial.ipynb  FinbertDistillationCompression.ipynb  LLAMA_3_1_Finetune_Finance.ipynb  PipelinesTutorial.ipynb
genai4t/: utils.py
genai4t/chapters/flows/: core.py  nice.py  realnvp.py
genai4t/chapters/gans/: __init__.py  core.py  quantgan.py  timegan.py
genai4t/chapters/vae/: __init__.py  core.py  timevae.py
genai4t/data/: processing.py
genai4t/evaluation/: metrics.py  simple_evaluator.py
genai4t/evaluation/generation/: bp.py  core.py  discriminator.py  predictive.py  util.py  visualize.py
genai4t/forecasting/: core.py  data.py  inferece.py  simulations.py  util.py
genai4t/forecasting/predictors/: ar.py  chronos.py  lin_ar.py  lstm.py  naive.py  prob_ar.py  util.py  wavenet.py
genai4t/forecasting/predictors/lag_llama/: __init__.py
genai4t/forecasting/predictors/lag_llama/data/: data_utils.py
genai4t/forecasting/predictors/lag_llama/gluon/: estimator.py  lightning_module.py
genai4t/forecasting/predictors/lag_llama/model/: module.py
genai4t/model/: __init__.py  core.py  layers.py  utils.py
genai4t/plot_style/: plot_style.py
